Fix: panel-heading also has white gap on right side on high-dpi-screen

--- a/css/style.css
+++ b/css/style.css
@@ -143,8 +143,7 @@ form#add-favorite-modal div.form-group {
   border-radius: 5px;
 }
 .panel-heading {
-  margin-top: -0.5px;
-  margin-bottom: -0.5px;
+  margin: -0.5px;
 }
 .panel-info {
   border-color: #d9edf7;
